# vis

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
assets/models/alduin/: license.txt  scene.gltf
render_engine/: CMakeLists.txt
render_engine/include/: camera.hpp  error_logger.hpp  gpu_resource_manager.hpp  graphics_device.hpp  graphics_pipeline_manager.hpp  handles.hpp  math.hpp  mesh.hpp~  model.hpp  render_engine.hpp  swapchain.hpp  utilities.hpp  vulkan_types.hpp  window.hpp
render_engine/include/templates/: model.tpp
render_engine/src/: camera.cpp  error_logger.cpp  gpu_resource_manager.cpp  graphics_device.cpp  graphics_pipeline_manager.cpp  math.cpp  model.cpp  render_engine.cpp  swapchain.cpp  window.cpp
shaders/: CMakeLists.txt  default_mesh_shader.frag  default_mesh_shader.frag.spv  default_mesh_shader.vert  default_mesh_shader.vert.spv
thoughts/: design_ideas.md
